tests/baselines/reference/parserModuleDeclaration4.d.errors.txt
parserModuleDeclaration4.d.ts(1,1): error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.
parserModuleDeclaration4.d.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserModuleDeclaration4.d.ts(2,3): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
parserModuleDeclaration4.d.ts(2,18): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== parserModuleDeclaration4.d.ts (4 errors) ====
    module M {
    ~~~~~~
!!! error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      declare module M1 {
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
                     ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      }
    }